<resources>
    <string name="app_name">Juegos</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="usar_preferencias">Usar preferencias</string>
    <string name="guardar">Guardar</string>
    <string name="su_nombre_porfavor">Su nombre porfavor</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="nombre_del_juego">Nombre del juego</string>
    <string name="consola">Consola</string>
    <string name="comprar">Comprar</string>
    <string name="_130_00_mxn">130.00 MXN</string>
    <string name="su_edad">Su edad</string>
    <string name="su_altura">Su altura</string>
    <string name="su_presupuesto">Presupuesto</string>
    <string name="vertical">Vertical</string>
    <string name="horizontal">Horizontal</string>
    <string name="dos_columnas">Dos Columnas</string>
    <string name="tres_columnas">Tres Columnas</string>
    <string name="clasif">Clasif</string>
</resources>